<resources>
    <string name="app_name">Venex</string>

    <string name="login">로그인</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_fail">로그인 실패</string>
    <string name="not_account">계정이 없으신가요?</string>
    <string name="have_account">계정이 있으신가요?</string>
    <string name="checking_your_password">비밀번호가 맞지 않습니다.</string>
    <string name="signup">회원가입</string>
    <string name="signup_success">회원가입 성공</string>
    <string name="signup_fail">회원가입 실패</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="emailANDpassoword_null">이메일과 비밀번호를 입력 해 주세요</string>
    <string name="not_found_account">없는 계정입니다.</string>
    <string name="error_1">서비스 오류</string>
    <string name="error_2">Venex</string>
    <string name="chatroom_editText">입력</string>
    <string name="last_messeage">마지막 메세지</string>
    <string name="time">2019.12.15</string>
    <string name="one_line">한줄 소개</string>
    <string name="people_name">사용자 이름</string>
    <string name="account_setting">계정 설정</string>
    <string name="account">계정</string>
    <string name="notification_setting">알림 설정</string>

    <string name="chat">채팅</string>
    <string name="notice">공지사항</string>
    <string name="people">사람</string>
    <string name="more">더 보기</string>


</resources>
